# minAlphaFold2

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
configs/: alphafold2.toml  medium.toml  tiny.toml  training_alphafold2.toml
minalphafold/: a3m.py  data.py  embedders.py  evoformer.py  geometry.py  heads.py  initialization.py  losses.py  mmcif.py  model.py  model_config.py  pdbio.py  residue_constants.py  structure_module.py  trainer.py  utils.py
scripts/: download_openproteinset.py  filter_openproteinset.py  modal_overfit.py  modal_overfit_single_pdb.py  modal_train_af2.py  overfit_processed_chain.py  overfit_single_pdb.py  preprocess_openproteinset.py  relax_pdb.py  train_af2.py
tests/: conftest.py  test_a3m.py  test_data_pipeline.py  test_geometry.py  test_losses.py  test_mmcif.py  test_openproteinset_scripts.py  test_pdbio.py  test_shapes.py  test_trainer.py
